| JDK 20 |
|---|
| 20 b17Fixed |
|
Blocks :
|
|
|
Relates :
|
|
|
Relates :
|
JDK-8040213 added detection of modified nodes that are not re-processed by IGVN. This logic should be extended to also cover Node::clone, Node::add_req, Node::add_req_batch, Node::ins_req, Node::add_prec, Node::set_prec, Node::rm_prec. In a second step JDK-8293362, we want to extend the detection to incremental inlining.
|