8255670: Improve C2's detection of modified nodes