src/hotspot/share/opto/loopPredicate.cpp
@@ -179,6 +179,7 @@ ProjNode* PhaseIdealLoop::create_new_if_for_predicate(ProjNode* cont_proj, Node*
   // if_uct to rgn
   _igvn.hash_delete(rgn);
   rgn->add_req(if_uct);
+  _igvn._worklist.push(rgn);
   // When called from beautify_loops() idom is not constructed yet.
   if (_idom != NULL) {
     Node* ridom = idom(rgn);
